--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: royal blue;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
