--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url(![banner](https://user-images.githubusercontent.com/78583260/128645647-adac76de-05b5-4252-9e88-e07fef6ebbfc.jpg)) no-repeat center;
+    background: url(https://www.shutterstock.com/image-photo/black-background-texture-pattern-all-use-425112010) no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
